--- a/templates/sale/new.html.twig
+++ b/templates/sale/new.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('includes/documentation.html.twig') }}
 
-    <section class="wrapper wrapper-style">
+    <section class="wrapper wrapper-style grid gap-4">
 
         <div class="flex justify-center">
             <div class="wrapper wrapper-yellow lg:space-x-4">
