:lipstick: Fix some style

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -18,7 +18,7 @@ h1 {
 }
 
 h3 {
-  @apply text-6xl font-bold leading-tight tracking-tight text-tertiary-400 dark:text-tertiary-400;
+  @apply text-xl font-bold leading-tight tracking-tight text-tertiary-400 dark:text-tertiary-400;
 }
 
 h2 {
