--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -2,34 +2,85 @@
 
 {% block body %}
     <h1 class="text-center">XPETifus</h1>
-    <main class="wrapper wrapper-style grid gap-8">
-        {% if profitability is not null %}
-            {% if profitability == 0 %}
-                <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
-            {% endif %}
-        {% endif %}
-        <div class=" max-w-screen-md mx-auto w-full grid gap-4">
-            <img class="w-48 mx-auto" src="{{ asset('uploads/dragoune.png') }}" alt="Image dragoune Dofus">
-            {{ form_start(form, {'attr': {'class': 'form-wrapper'}}) }}
-            {{ form_row(form.resource) }}
-            {{ form_row(form.price) }}
-            {{ form_row(form.submit) }}
-            {{ form_end(form) }}
-
+    <main class="grid gap-4">
+        <section class="wrapper wrapper-style grid gap-8">
             {% if profitability is not null %}
-                <div class="grid gap-4 justify-center">
-                    <div>Rentabilité : <strong class="text-green-400">{{ profitability }}%</strong></div>
-                </div>
+                {% if profitability == 0 %}
+                    <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                {% endif %}
             {% endif %}
+            <div class=" max-w-screen-md mx-auto w-full grid gap-4">
+                <img class="w-48 mx-auto" src="{{ asset('uploads/dragoune.png') }}" alt="Image dragoune Dofus">
+                {{ form_start(form, {'attr': {'class': 'form-wrapper'}}) }}
+                {{ form_row(form.resource) }}
+                {{ form_row(form.price) }}
+                {{ form_row(form.submit) }}
+                {{ form_end(form) }}
 
-            <h3>Comment ça fonctionne ?</h3>
-            <ol class="list-decimal list-inside grid gap-2">
-                <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
-                <li>Lancez le calcul.</li>
-                <li>Observez le résultat.</li>
-            </ol>
+                {% if profitability is not null %}
+                    <div class="grid gap-4 justify-center">
+                        <div>Rentabilité : <strong class="text-green-400">{{ profitability }}%</strong></div>
+                    </div>
+                {% endif %}
 
-            <p>Un bon nombre de ressources n'est pas renseigné et le résultat peut-être 0 à de nombreuses reprises. Veuillez nous informer des valeurs pour que l'on puisse mettre à jour.</p>
+                <h3>A quoi ça sert ?</h3>
+                <p>Cet outil vous permet de calculer le pourcentage de profit d'une ressource en fonction de son expérience donnée au familier et de son prix.</p>
+                <h3>Comment ça fonctionne ?</h3>
+                <ol class="list-decimal list-inside grid gap-2">
+                    <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
+                    <li>Lancez le calcul.</li>
+                    <li>Observez le résultat.</li>
+                </ol>
+
+                <p>Un bon nombre de ressources n'est pas renseigné et le résultat peut-être 0 à de nombreuses reprises. Veuillez nous informer des valeurs pour que l'on puisse mettre à jour.</p>
+            </div>
+        </section>
+
+        <div class="flex justify-center">
+            {{ knp_pagination_render(pagination) }}
+        </div>
+        <section class="wrapper wrapper-style wrapper-p-0 text-sm">
+            <table class="w-full text-left rtl:text-right">
+                <thead class="text-xs uppercase">
+                <tr class="border-b border-gray-300 dark:border-gray-700">
+                    <th scope="col" class="p-2 ">
+                        <span class="hidden sm:block text-xs"></span>
+                        <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family"></span>
+                    </th>
+                    <th scope="col" class="p-2 hidden xl:table-cell">
+                        <span class="hidden sm:block text-xs">Nom de l'</span>
+                        <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
+                    </th>
+                    <th scope="col" class="p-2 hidden xl:table-cell">
+                        <span class="sm:block text-xs">Level de l'</span>
+                        <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
+                    </th>
+                    <th scope="col" class="p-2 hidden xl:table-cell">
+                        <span class="hidden sm:block text-xs">Xp de l'</span>
+                        <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for resource in pagination %}
+                    <tr class="border-b border-gray-300 dark:border-gray-700">
+                        <td class="p-2 hidden xl:table-cell">
+                            {% if resource.getImgUrl() %}
+                                <img class="w-8" src="{{ resource.getImgUrl() }}" alt="Image de {{ resource.getName() }}">
+                            {% endif %}
+                        </td>
+                        <td class="p-2">{{ resource.getName() }}</td>
+                        <td class="p-2 hidden xl:table-cell">{{ resource.getLevel() }}</td>
+                        <td class="p-2 hidden xl:table-cell">{{ resource.getXpPet }}</td>
+                    </tr>
+                {% else %}
+                    <li>Aucune ressource trouvée.</li>
+                {% endfor %}
+                </tbody>
+            </table>
+        </section>
+        <div class="flex justify-center">
+            {{ knp_pagination_render(pagination) }}
         </div>
     </main>
 {% endblock %}
