:bug: Link on xpetifus search

--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -42,7 +42,7 @@
                 <input value="{{ search }}" id="search" class="form-input h-full flex-1" type="text" name="search" placeholder="Galet brasillant" />
                 <button class="wrapper wrapper-green h-14 w-14 flex justify-center font-semibold" type="submit">GO</button>
 
-                <a class="wrapper wrapper-red h-14 w-14 flex justify-center" href="{{ path('app_monitor_index') }}">
+                <a class="wrapper wrapper-red h-14 w-14 flex justify-center" href="{{ path('app_xp_pet') }}">
                     <i data-feather="trash" class="w-4 h-4"></i>
                 </a>
             </div>
