:sparkles: Add xpetifus number value

--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -3,36 +3,70 @@
 {% block body %}
     <h1 class="text-center">XPETifus</h1>
     <main class="grid gap-4">
-        <section class="wrapper wrapper-style grid gap-8">
-            {% if profitability is not null %}
-                {% if profitability == 0 %}
-                    <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
-                {% endif %}
-            {% endif %}
-            <div class=" max-w-screen-md mx-auto w-full grid gap-4">
-                <img class="w-48 mx-auto" src="{{ asset('uploads/dragoune.png') }}" alt="Image dragoune Dofus">
-                {{ form_start(form, {'attr': {'class': 'form-wrapper'}}) }}
-                {{ form_row(form.resource) }}
-                {{ form_row(form.price) }}
-                {{ form_row(form.submit) }}
-                {{ form_end(form) }}
+        <section class="grid gap-8">
+            <div class="grid lg:grid-cols-2 gap-4">
+                <div class="grid gap-4 wrapper wrapper-style">
+                    {% if profitability is not null %}
+                        {% if profitability == 0 %}
+                            <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                        {% endif %}
+                    {% endif %}
+                    <img class="w-48 mx-auto" src="{{ asset('uploads/dragoune.png') }}" alt="Image dragoune Dofus">
+                    {{ form_start(formXpPetPercent, {'attr': {'class': 'form-wrapper'}}) }}
+                    {{ form_row(formXpPetPercent.resource) }}
+                    {{ form_row(formXpPetPercent.price) }}
+                    {{ form_row(formXpPetPercent.submit) }}
+                    {{ form_end(formXpPetPercent) }}
 
-                {% if profitability is not null %}
-                    <div class="grid gap-4 justify-center">
-                        <div>Rentabilité : <strong class="text-green-400">{{ profitability }}%</strong></div>
-                    </div>
-                {% endif %}
+                    {% if profitability is not null %}
+                        <div class="grid gap-4 justify-center">
+                            <div>Rentabilité : <strong class="text-green-400">{{ profitability }}%</strong></div>
+                        </div>
+                    {% endif %}
 
-                <h3>A quoi ça sert ?</h3>
-                <p>Cet outil vous permet de calculer le pourcentage de profit d'une ressource en fonction de son expérience donnée au familier et de son prix.</p>
-                <h3>Comment ça fonctionne ?</h3>
-                <ol class="list-decimal list-inside grid gap-2">
-                    <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
-                    <li>Lancez le calcul.</li>
-                    <li>Observez le résultat.</li>
-                </ol>
+                    <h3>A quoi ça sert ?</h3>
+                    <p>Cet outil vous permet de calculer le coup d'un point d'expérience en fonction de la ressource et de son prix.</p>
+                    <h3>Comment ça fonctionne ?</h3>
+                    <ol class="list-decimal list-inside grid gap-2">
+                        <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
+                        <li>Lancez le calcul.</li>
+                        <li>Observez le résultat.</li>
+                    </ol>
 
-                <p>Un bon nombre de ressources n'est pas renseigné et le résultat peut-être 0 à de nombreuses reprises. Veuillez nous informer des valeurs pour que l'on puisse mettre à jour.</p>
+                    <p>Un bon nombre de ressources n'est pas renseigné et le résultat peut-être 0 à de nombreuses reprises. Veuillez nous informer des valeurs pour que l'on puisse mettre à jour.</p>
+                </div>
+
+                <div class="grid gap-4 wrapper wrapper-style">
+                    {% if profitability is not null %}
+                        {% if profitability == 0 %}
+                            <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                        {% endif %}
+                    {% endif %}
+                    <img class="w-48 mx-auto" src="{{ asset('uploads/bworky.png') }}" alt="Image dragoune Dofus">
+
+                    {{ form_start(formXpPetNumber, {'attr': {'class': 'form-wrapper'}}) }}
+                    {{ form_row(formXpPetNumber.resource) }}
+                    {{ form_row(formXpPetNumber.price) }}
+                    {{ form_row(formXpPetNumber.submit) }}
+                    {{ form_end(formXpPetNumber) }}
+
+                    {% if profitability is not null %}
+                        <div class="grid gap-4 justify-center">
+                            <div>Rentabilité : <strong class="text-green-400">{{ profitability }} kamas</strong></div>
+                        </div>
+                    {% endif %}
+
+                    <h3>A quoi ça sert ?</h3>
+                    <p>Cet outil vous permet de calculer le pourcentage de profit d'une ressource en fonction de son expérience donnée au familier et de son prix.</p>
+                    <h3>Comment ça fonctionne ?</h3>
+                    <ol class="list-decimal list-inside grid gap-2">
+                        <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
+                        <li>Lancez le calcul.</li>
+                        <li>Observez le résultat.</li>
+                    </ol>
+
+                    <p>Un bon nombre de ressources n'est pas renseigné et le résultat peut-être 0 à de nombreuses reprises. Veuillez nous informer des valeurs pour que l'on puisse mettre à jour.</p>
+                </div>
             </div>
         </section>
 
@@ -83,7 +117,9 @@
                         <td class="p-2 hidden xl:table-cell">{{ resource.getXpPet }}</td>
                     </tr>
                 {% else %}
-                    <li>Aucune ressource trouvée.</li>
+                    <tr class="border-b border-gray-300 dark:border-gray-700">
+                        <td class="p-2 hidden xl:table-cell">Aucune ressource trouvée.</td>
+                    </tr>
                 {% endfor %}
                 </tbody>
             </table>
