:sparkles: XPETifus updated

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -41,6 +41,10 @@
                     <i data-feather="award" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Records</span>
                 </a>
+                <a href="{{ path("app_xp_pet") }}" class="nav-item">
+                    <i data-feather="award" class="nav-item-icon"></i>
+                    <span class="ml-6 font-semibold text-sm">XPETifus</span>
+                </a>
                 <a href="{{ path("app_documentation") }}" class="nav-item">
                     <i data-feather="book" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Documentation</span>
