--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -6,6 +6,7 @@
         <section class="grid gap-8">
             <div class="grid lg:grid-cols-2 gap-4">
                 <div class="grid gap-4 wrapper wrapper-style">
+                    <h2 class="text-center">Rentabilité de la ressource</h2>
                     {% if profitability is not null %}
                         {% if profitability == 0 %}
                             <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
@@ -37,6 +38,7 @@
                 </div>
 
                 <div class="grid gap-4 wrapper wrapper-style">
+                    <h2 class="text-center">Prix d'un point d'expérience</h2>
                     {% if profitability is not null %}
                         {% if profitability == 0 %}
                             <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
