--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -54,7 +54,7 @@
 
                     {% if profitability is not null %}
                         <div class="grid gap-4 justify-center">
-                            <div>Rentabilité : <strong class="text-green-400">{{ profitability }} kamas</strong></div>
+                            <div>Rentabilité : <strong class="text-green-400">{{ number }} kamas</strong></div>
                         </div>
                     {% endif %}
 
